--- a/property7.html
+++ b/property7.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Family and pet friendly home!</title>
+    <title>Monthly furnished Apartment in Downtown LR!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -152,7 +152,7 @@
             <button class="slide-arrow next-arrow">&#10095;</button>
         </div>
         <div class="description">
-            <p>Family and pet friendly home!</p>
+            <p>Monthly furnished Apartment in Downtown LR!</p>
             <p id="distanceDisplay">Calculating distance...</p> <!-- Adjusted for distance display -->
         </div>
 <div class="categories">
@@ -172,8 +172,8 @@
                 <h2>Booking</h2>
                 <p>Book this property now!</p>
                 <div class="booking-buttons">
-                    <a href="https://www.airbnb.com/rooms/859616286105603942?guests=1&adults=1&s=67&unique_share_id=64e34d22-7525-42d8-bc82-a5c4a87d84e1&source_impression_id=p3_1710787831_YrGcNJ%2BVqCdMiJur" id="airbnb-link">AIRBNB</a>
-                    <a href="https://www.vrbo.com/3329870?rm1=a2&expediaPropertyId=92434826&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
+                    <a href="https://www.airbnb.com/rooms/44568459?guests=1&adults=1&s=67&unique_share_id=d7ba4a94-4274-4c43-a214-bc3a64d1fd90&source_impression_id=p3_1710787838_aYfqgGfBBVhQOiB1" id="airbnb-link">AIRBNB</a>
+                    <a href="https://www.vrbo.com/2261876?rm1=a2&expediaPropertyId=66409340&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
                 </div>
             </div>
     </section>
