--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,16 @@
         body > .container {
             margin-top: 50px;
         }
+        .review-link {
+            display: block;
+            text-align: center;
+            margin-top: 20px;
+        }
+        .review-link img {
+            max-width: 100%;
+            height: auto;
+            /* Adjust as necessary for your layout */
+        }
     </style>
 </head>
 <body>
@@ -71,10 +81,13 @@
     <div class="container">
         <h2>Contact Us</h2>
         <p>If you have any inquiries or need assistance, please feel free to contact us using the information below:</p>
-        <p></p>
         <p>Call Ruth: <a href="tel:+15013473433"> (501) 347-3433</a></p>
         <p>Call Jaime: <a href="tel:+15013101113"> (501) 310-1113</a></p>                                                        
         <p>Email Us: <a href="mailto:thevplaces@gmail.com"> thevplaces@gmail.com</a></p>
-     </div>
+        <p class="review-link">See some of our reviews!</p>
+        <a href="https://www.airbnb.com/users/show/101528114" class="review-link">
+            <img src="PicturesGeneral/RuthLittleRockAirBNBSuperHost" alt="Read Our Reviews">
+        </a>
+    </div>
 </body>
 </html>
