--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
         <p>Email Us: <a href="mailto:thevplaces@gmail.com"> thevplaces@gmail.com</a></p>
         <p class="review-link">See some of our reviews!</p>
         <a href="https://www.airbnb.com/users/show/101528114" class="review-link">
-            <img src="PicturesGeneral/RuthLittleRockAirBNBSuperHost" alt="Read Our Reviews">
+            <img src="PicturesGeneral/RuthLittleRockAirBNBSuperHost.png" alt="Read Our Reviews">
         </a>
     </div>
 </body>
