--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
         <p>Call Ruth: <a href="tel:+15013473433"> (501) 347-3433</a></p>
         <p>Call Jaime: <a href="tel:+15013101113"> (501) 310-1113</a></p>                                                        
         <p>Email Us: <a href="mailto:thevplaces@gmail.com"> thevplaces@gmail.com</a></p>
-        <p class="review-link">See some of our reviews!</p>
+        <p class="review-link">Click here to see some of our reviews!</p>
         <a href="https://www.airbnb.com/users/show/101528114" class="review-link">
             <img src="PicturesGeneral/RuthLittleRockAirBNBSuperHost.png" alt="Read Our Reviews">
         </a>
