--- a/property1.html
+++ b/property1.html
@@ -57,8 +57,9 @@
         }
         .image-slider {
             overflow: hidden;
-            max-width: 600px;
-            margin: 60px auto; /* Adjusted margin for visibility */
+            width: 100%; /* Adjusted to control the size of the slider */
+            max-width: 600px; /* You can adjust this to fit the size you prefer */
+            margin: 60px auto;
         }
         .image-container {
             display: flex;
@@ -66,15 +67,13 @@
             scroll-snap-type: x mandatory; /* Enables snap scrolling */
             -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
         }
-               .slide-image {
-            width: 90%; /* Adjusted width to size down images */
-            height: auto; /* Maintains aspect ratio */
-            flex: 0 0 auto; /* Ensures that the images do not grow or shrink outside of specified dimensions */
+        .slide-image {
+            width: 100%; /* Each image will fill the slider */
+            height: auto; /* Keeps the aspect ratio */
+            flex: 0 0 100%; /* Prevents images from shrinking and ensures they take full width of the container */
             scroll-snap-align: start; /* Ensures each image snaps in place */
-            object-fit: cover; /* Ensures the image covers the area, this might crop images though */
-            margin: 0 auto; /* Centers the image in the container */
+            object-fit: cover; /* Covers the area of the container */
         }
-
         /* Hide scrollbar for cleaner look */
         .image-container::-webkit-scrollbar {
             display: none;
@@ -109,7 +108,7 @@
             }
         }
         body > .container {
-            margin-top: 110px; /* Adjusted to prevent overlap with fixed header */
+            margin-top: 110px;
         }
     </style>
 </head>
