--- a/property1.html
+++ b/property1.html
@@ -55,12 +55,12 @@
             background-color: #eee;
             border-color: #bbb;
         }
-        .image-slider {
-            overflow: hidden;
-            width: 100%; /* Adjusted to control the size of the slider */
-            max-width: 600px; /* You can adjust this to fit the size you prefer */
-            margin: 60px auto;
-        }
+            .image-slider {
+        overflow: hidden;
+        width: 80%; /* Adjust the width percentage as needed */
+        max-width: 480px; /* Adjust this value to make images smaller */
+        margin: 60px auto; /* Keeps the slider centered */
+            }
         .image-container {
             display: flex;
             overflow-x: auto;
