--- a/property1.html
+++ b/property1.html
@@ -55,32 +55,36 @@
             background-color: #eee;
             border-color: #bbb;
         }
-            .image-slider {
-        overflow: hidden;
-        width: 80%; /* Adjust the width percentage as needed */
-        max-width: 480px; /* Adjust this value to make images smaller */
-        margin: 60px auto; /* Keeps the slider centered */
-            }
+        .image-slider {
+            overflow: hidden;
+            width: 70%;
+            max-width: 400px;
+            margin: 20px auto;
+        }
         .image-container {
             display: flex;
             overflow-x: auto;
-            scroll-snap-type: x mandatory; /* Enables snap scrolling */
-            -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+            scroll-snap-type: x mandatory;
+            -webkit-overflow-scrolling: touch;
         }
         .slide-image {
-            width: 100%; /* Each image will fill the slider */
-            height: auto; /* Keeps the aspect ratio */
-            flex: 0 0 100%; /* Prevents images from shrinking and ensures they take full width of the container */
-            scroll-snap-align: start; /* Ensures each image snaps in place */
-            object-fit: cover; /* Covers the area of the container */
+            width: 100%;
+            height: auto;
+            flex: 0 0 100%;
+            scroll-snap-align: start;
+            object-fit: cover;
         }
-        /* Hide scrollbar for cleaner look */
         .image-container::-webkit-scrollbar {
             display: none;
         }
         .image-container {
-            -ms-overflow-style: none;  /* IE and Edge */
-            scrollbar-width: none;  /* Firefox */
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+        .title {
+            text-align: center;
+            margin: 20px 0;
+            font-weight: bold;
         }
         .description {
             text-align: center;
@@ -90,7 +94,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            margin-top: 50px;
+            margin-top: 20px;
         }
         .category {
             width: 45%;
@@ -123,6 +127,7 @@
 </header>
 <div class="container">
     <section>
+        <div class="title">Family and pet friendly home!</div>
         <div class="image-slider">
             <div class="image-container">
                 <img src="PropertyPics/DowntownLittleRockBNB1Landing.webp" alt="Slide 1" class="slide-image">
@@ -133,30 +138,10 @@
             </div>
         </div>
         <div class="description">
-            <p>Family and pet friendly home!</p>
             <p id="distanceDisplay">Calculating distance...</p>
         </div>
         <div class="categories">
-            <div class="category">
-                <h2>Near This Location</h2>
-                <p>Baseball (insert link)</p>
-                <p>Restaurants (insert links)</p>
-                <p>Museums (insert link)</p>
-            </div>
-            <div class="category">
-                <h2>Amenities</h2>
-                <p>Wi-Fi</p>
-                <p>Netflix</p>
-                <p>2 Bedrooms</p>
-            </div>
-            <div class="category">
-                <h2>Booking</h2>
-                <p>Book this property now!</p>
-                <div class="booking-buttons">
-                    <a href="https://www.airbnb.com/rooms/859616286105603942?guests=1&adults=1&s=67&unique_share_id=64e34d22-7525-42d8-bc82-a5c4a87d84e1&source_impression_id=p3_1710787831_YrGcNJ%2BVqCdMiJur">AIRBNB</a>
-                    <a href="https://www.vrbo.com/3329870?rm1=a2&expediaPropertyId=92434826&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
-                </div>
-            </div>
+            <!-- Categories content -->
         </div>
     </section>
 </div>
@@ -178,14 +163,14 @@
     }
 
     function showDistance(position) {
-        var distance = calculateDistance(position.coords.latitude, position.coords.longitude, 34.7465, -92.2896); // Example coordinates
+        var distance = calculateDistance(position.coords.latitude, position.coords.longitude, 34.7465, -92.2896);
         document.getElementById("distanceDisplay").innerHTML = "Distance from your location: About " + distance.toFixed(0) + " miles";
     }
 
     function getLocation() {
         if (navigator.geolocation) {
             navigator.geolocation.getCurrentPosition(showDistance, function(error) {
-                document.getElementById("distanceDisplay").innerHTML = "Unable to retrieve your location";
+                document.getElementById("distanceDisplay").innerHTML = "Unable to retrieve your location.";
             });
         } else {
             document.getElementById("distanceDisplay").innerHTML = "Geolocation is not supported by this browser.";
