--- a/property1.html
+++ b/property1.html
@@ -141,7 +141,26 @@
             <p id="distanceDisplay">Calculating distance...</p>
         </div>
         <div class="categories">
-            <!-- Categories content -->
+            <div class="category">
+                <h2>Near This Location</h2>
+                <p>Baseball fields nearby</p>
+                <p>Local restaurants within walking distance</p>
+                <p>Museums for family outings</p>
+            </div>
+            <div class="category">
+                <h2>Amenities</h2>
+                <p>High-speed Wi-Fi</p>
+                <p>Netflix subscription included</p>
+                <p>2 cozy bedrooms</p>
+            </div>
+            <div class="category">
+                <h2>Booking</h2>
+                <p>Reserve your stay now!</p>
+                <div class="booking-buttons">
+                    <a href="https://www.airbnb.com/rooms/859616286105603942?guests=1&adults=1&s=67&unique_share_id=64e34d22-7525-42d8-bc82-a5c4a87d84e1&source_impression_id=p3_1710787831_YrGcNJ%2BVqCdMiJur">AIRBNB</a>
+                    <a href="https://www.vrbo.com/3329870?rm1=a2&expediaPropertyId=92434826&referrerId=HOT.HIS.Share.Landed.Copy_Link">VRBO</a>
+                </div>
+            </div>
         </div>
     </section>
 </div>
