--- a/property1.html
+++ b/property1.html
@@ -82,10 +82,11 @@
             scrollbar-width: none;
         }
         .title {
-            text-align: center;
-            margin: 20px 0;
-            font-weight: bold;
-        }
+        text-align: center;
+        margin: 20px 0;
+        font-weight: bold;
+        font-size: 24px; 
+            }
         .description {
             text-align: center;
             margin-top: 20px;
