--- a/property1.html
+++ b/property1.html
@@ -56,37 +56,66 @@
             border-color: #bbb;
         }
         .image-slider {
-            overflow: hidden;
-            width: 70%;
-            max-width: 400px;
+            position: relative;
+            max-width: 600px;
             margin: 20px auto;
         }
         .image-container {
             display: flex;
-            overflow-x: auto;
-            scroll-snap-type: x mandatory;
-            -webkit-overflow-scrolling: touch;
+            overflow: hidden;
         }
         .slide-image {
-            width: 100%;
-            height: auto;
-            flex: 0 0 100%;
-            scroll-snap-align: start;
-            object-fit: cover;
-        }
-        .image-container::-webkit-scrollbar {
+            max-width: 100%;
             display: none;
+            transition: 0.5s ease;
         }
-        .image-container {
-            -ms-overflow-style: none;
-            scrollbar-width: none;
+        .prev-arrow, .next-arrow {
+            cursor: pointer;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            padding: 16px;
+            color: white;
+            font-weight: bold;
+            background-color: rgba(0, 0, 0, 0.5);
+            border: none;
         }
-        .title {
-        text-align: center;
-        margin: 20px 0;
-        font-weight: bold;
-        font-size: 24px; 
+        .next-arrow {
+            right: 0;
+        }
+        .prev-arrow {
+            left: 0;
+        }
+        .dot-container {
+            text-align: center;
+            padding: 10px;
+        }
+        .dot {
+            cursor: pointer;
+            height: 15px;
+            width: 15px;
+            margin: 0 5px;
+            background-color: #bbb;
+            border-radius: 50%;
+            display: inline-block;
+            transition: background-color 0.6s ease;
+        }
+        .active, .dot:hover {
+            background-color: #717171;
+        }
+        @media (max-width: 600px) {
+            .slide-image {
+                height: auto; /* Maintain aspect ratio */
+                max-height: 250px; /* Reduce height on smaller screens */
             }
+        }
+        /* Desktop specific adjustments */
+        @media (min-width: 601px) {
+            .slide-image {
+                width: 50%; /* Drastically reduce size for desktop */
+                margin: auto; /* Center the image */
+            }
+        }
         .description {
             text-align: center;
             margin-top: 20px;
@@ -95,7 +124,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            margin-top: 20px;
+            margin-top: 50px;
         }
         .category {
             width: 45%;
@@ -113,7 +142,7 @@
             }
         }
         body > .container {
-            margin-top: 110px;
+            margin-top: 60px;
         }
     </style>
 </head>
@@ -136,6 +165,13 @@
                 <img src="PropertyPics/DowntownLittleRockBNB3Landing.webp" alt="Slide 3" class="slide-image">
                 <img src="PropertyPics/DowntownLittleRockBNB4Landing.webp" alt="Slide 4" class="slide-image">
                 <img src="PropertyPics/DowntownLittleRockBNB5Landing.webp" alt="Slide 5" class="slide-image">
+            </div>
+            <div class="dot-container">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(4)"></span>
+                <span class="dot" onclick="currentSlide(5)"></span>
             </div>
         </div>
         <div class="description">
@@ -195,6 +231,33 @@
         } else {
             document.getElementById("distanceDisplay").innerHTML = "Geolocation is not supported by this browser.";
         }
+    }
+
+    let slideIndex = 1;
+    showSlides(slideIndex);
+
+    function plusSlides(n) {
+      showSlides(slideIndex += n);
+    }
+
+    function currentSlide(n) {
+      showSlides(slideIndex = n);
+    }
+
+    function showSlides(n) {
+      var i;
+      var slides = document.getElementsByClassName("slide-image");
+      var dots = document.getElementsByClassName("dot");
+      if (n > slides.length) {slideIndex = 1}    
+      if (n < 1) {slideIndex = slides.length}
+      for (i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";  
+      }
+      for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex-1].style.display = "block";  
+      dots[slideIndex-1].className += " active";
     }
 
     window.onload = getLocation;
