--- a/property1.html
+++ b/property1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta viewport="width=device-width, initial-scale=1.0">
     <title>Family and pet friendly home!</title>
     <style>
         body {
@@ -56,35 +56,31 @@
             border-color: #bbb;
         }
         .image-slider {
-            position: relative;
-            max-width: 600px;
+            overflow: hidden;
+            width: 70%;
+            max-width: 400px;
             margin: 20px auto;
+            position: relative;
         }
         .image-container {
             display: flex;
-            overflow: hidden;
+            overflow-x: auto;
+            scroll-snap-type: x mandatory;
+            -webkit-overflow-scrolling: touch;
         }
         .slide-image {
-            max-width: 100%;
+            width: 100%;
+            height: auto;
+            flex: 0 0 100%;
+            scroll-snap-align: start;
+            object-fit: cover;
+        }
+        .image-container::-webkit-scrollbar {
             display: none;
-            transition: 0.5s ease;
         }
-        .prev-arrow, .next-arrow {
-            cursor: pointer;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            padding: 16px;
-            color: white;
-            font-weight: bold;
-            background-color: rgba(0, 0, 0, 0.5);
-            border: none;
-        }
-        .next-arrow {
-            right: 0;
-        }
-        .prev-arrow {
-            left: 0;
+        .image-container {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
         }
         .dot-container {
             text-align: center;
@@ -103,18 +99,11 @@
         .active, .dot:hover {
             background-color: #717171;
         }
-        @media (max-width: 600px) {
-            .slide-image {
-                height: auto; /* Maintain aspect ratio */
-                max-height: 250px; /* Reduce height on smaller screens */
-            }
-        }
-        /* Desktop specific adjustments */
-        @media (min-width: 601px) {
-            .slide-image {
-                width: 50%; /* Drastically reduce size for desktop */
-                margin: auto; /* Center the image */
-            }
+        .title {
+            text-align: center;
+            margin: 80px 0 20px; /* Adjusted margin for visibility */
+            font-weight: bold;
+            font-size: 24px; 
         }
         .description {
             text-align: center;
@@ -124,7 +113,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-around;
-            margin-top: 50px;
+            margin-top: 20px;
         }
         .category {
             width: 45%;
@@ -139,6 +128,9 @@
             .category {
                 width: 100%;
                 margin: 10px 0;
+            }
+            .image-slider {
+                width: 100%; /* Full width for mobile */
             }
         }
         body > .container {
@@ -236,31 +228,30 @@
     let slideIndex = 1;
     showSlides(slideIndex);
 
-    function plusSlides(n) {
-      showSlides(slideIndex += n);
-    }
-
     function currentSlide(n) {
-      showSlides(slideIndex = n);
+        showSlides(slideIndex = n);
     }
 
     function showSlides(n) {
-      var i;
-      var slides = document.getElementsByClassName("slide-image");
-      var dots = document.getElementsByClassName("dot");
-      if (n > slides.length) {slideIndex = 1}    
-      if (n < 1) {slideIndex = slides.length}
-      for (i = 0; i < slides.length; i++) {
-          slides[i].style.display = "none";  
-      }
-      for (i = 0; i < dots.length; i++) {
-          dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex-1].style.display = "block";  
-      dots[slideIndex-1].className += " active";
+        var i;
+        var slides = document.getElementsByClassName("slide-image");
+        var dots = document.getElementsByClassName("dot");
+        if (n > slides.length) {slideIndex = 1}
+        if (n < 1) {slideIndex = slides.length}
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex-1].style.display = "block";
+        dots[slideIndex-1].className += " active";
     }
 
-    window.onload = getLocation;
+    window.onload = function() {
+        getLocation();
+        showSlides(slideIndex); // Ensure the initial image and dot are set
+    };
 </script>
 </body>
 </html>
